--- a/src/lr-score.ipynb
+++ b/src/lr-score.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "rf_split_sex"
+  "name": "lr-score"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,34 +28,46 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from sklearn.ensemble import RandomForestClassifier"
+      "from sklearn.linear_model import LogisticRegression"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 66
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "clf = RandomForestClassifier(n_estimators=100, max_depth=6)"
+      "clf = LogisticRegression(penalty='l1', C=0.1)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 67
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "train = copper.load('train')"
+      "train = copper.load('train.ds')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 68
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "train.type['pclass'] = train.CATEGORY\n",
+      "train.role['embarked'] = train.REJECT"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 59
     },
     {
      "cell_type": "code",
@@ -66,61 +78,29 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 69
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "random.seed(123)\n",
-      "mc.sample(train, 0.7)"
+      "mc.train = train"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 70
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "div_wrapper = copper.DivWrapper(clf, train, 'sex')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "['female', 'male']\n",
-        "[5, 6]\n"
-       ]
-      }
-     ],
-     "prompt_number": 7
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "mc.add_clf(clf, 'rf')"
+      "mc.add_clf(clf, 'lr')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "mc.add_clf(div_wrapper, 'div_by')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 71
     },
     {
      "cell_type": "code",
@@ -130,108 +110,28 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "female 5\n",
-        "male"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 6\n"
-       ]
-      }
-     ],
-     "prompt_number": 10
+     "outputs": [],
+     "prompt_number": 72
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.accuracy()"
+      "mc.cv_accuracy()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 73,
        "text": [
-        "div_by_sex    0.835821\n",
-        "rf            0.820896\n",
-        "Name: Accuracy"
+        "lr    0.784512\n",
+        "Name: CV Accuracy"
        ]
       }
      ],
-     "prompt_number": 11
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "pred = mc.predict()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 30
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "pred_div_0 = pred['div_by'] == 0"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 31
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "pred_rf_0 = pred['rf'] == 0"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 32
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "pred = pred[(pred_div_0 != pred_rf_0)]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 33
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "len(pred)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 34,
-       "text": [
-        "8"
-       ]
-      }
-     ],
-     "prompt_number": 34
+     "prompt_number": 73
     },
     {
      "cell_type": "heading",
@@ -250,7 +150,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -261,7 +161,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -273,18 +173,18 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.add_clf(div_wrapper, 'div')"
+      "mc.add_clf(clf, 'rf')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -294,24 +194,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "female 5\n",
-        "male"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 6\n"
-       ]
-      }
-     ],
-     "prompt_number": 22
+     "outputs": [],
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -322,18 +206,18 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 41
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "copper.save(pred, 'pred_div_sex.csv', index=False, header=False)"
+      "copper.save(pred, 'pred.csv', index=False, header=False)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
