--- a/src/rf-pca.ipynb
+++ b/src/rf-pca.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "rf_score"
+  "name": "rf_pca"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -72,8 +72,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "random.seed(123)\n",
-      "mc.sample(train, 0.7)"
+      "mc.train = train"
      ],
      "language": "python",
      "metadata": {},
@@ -84,7 +83,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.add_clf(clf, 'rf')"
+      "pca = copper.PCAWrapper(clf, n_components=4)"
      ],
      "language": "python",
      "metadata": {},
@@ -95,7 +94,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.fit()"
+      "mc.add_clf(clf, 'rf')"
      ],
      "language": "python",
      "metadata": {},
@@ -106,21 +105,83 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.accuracy()"
+      "mc.add_clf(pca, 'pca')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mc.fit()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mc.cv_accuracy()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 9,
+       "prompt_number": 16,
        "text": [
-        "rf    0.817164\n",
-        "Name: Accuracy"
+        "rf     0.829408\n",
+        "pca    0.796849\n",
+        "Name: CV Accuracy"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mc.labels"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "Index([pclass, age, sibsp, parch, fare, sex#female, sex#male, embarked#C, embarked#Q, embarked#S], dtype=object)"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mc.clfs['rf'].feature_importances_"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "array([ 0.11930245,  0.17477043,  0.04733373,  0.02749968,  0.17017425,\n",
+        "        0.18612418,  0.23996506,  0.01003717,  0.00883937,  0.01595369])"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
