--- a/src/split-embarked.ipynb
+++ b/src/split-embarked.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "rf_splits_bag"
+  "name": "rf_split_embarked"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -39,7 +39,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "rf = RandomForestClassifier(n_estimators=100, max_depth=6)"
+      "clf = RandomForestClassifier(n_estimators=100, max_depth=6)"
      ],
      "language": "python",
      "metadata": {},
@@ -61,7 +61,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "split_sex = copper.SplitWrapper(rf, train, 'sex')"
+      "mc = copper.ModelComparison()"
      ],
      "language": "python",
      "metadata": {},
@@ -72,7 +72,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "split_embarked = copper.SplitWrapper(rf, train, 'embarked')"
+      "mc.train = train"
      ],
      "language": "python",
      "metadata": {},
@@ -83,7 +83,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc = copper.ModelComparison()"
+      "div_wrapper = copper.SplitWrapper(clf, train, 'embarked')"
      ],
      "language": "python",
      "metadata": {},
@@ -94,7 +94,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.sample(train, 0.7)"
+      "mc.add_clf(clf, 'rf')"
      ],
      "language": "python",
      "metadata": {},
@@ -105,7 +105,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.add_clf(split_sex, 'split_sex')"
+      "mc.add_clf(div_wrapper, 'div_by')"
      ],
      "language": "python",
      "metadata": {},
@@ -116,7 +116,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.add_clf(split_embarked, 'split_embarked')"
+      "mc.fit()"
      ],
      "language": "python",
      "metadata": {},
@@ -127,67 +127,22 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.fit()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 11
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "bag = copper.AverageBag()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "bag.add_clf(mc.clfs)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 13
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "mc.add_clf(bag, 'bag')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 14
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "mc.accuracy()"
+      "mc.cv_accuracy()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 11,
        "text": [
-        "split_sex         0.809701\n",
-        "bag               0.802239\n",
-        "split_embarked    0.798507\n",
-        "Name: Accuracy"
+        "div_by    0.824933\n",
+        "rf        0.823796\n",
+        "Name: CV Accuracy"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
