--- a/src/rf-columns-comb.ipynb
+++ b/src/rf-columns-comb.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "rf_split_embarked"
+  "name": "rf-columns-comb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,7 +22,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -33,7 +33,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -44,7 +44,15 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "All columns"
+     ]
     },
     {
      "cell_type": "code",
@@ -55,7 +63,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -66,56 +74,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "random.seed(123)\n",
-      "mc.sample(train, 0.7)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "div_wrapper = copper.DivWrapper(clf, train, 'embarked')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "['C', 'Q', 'S']\n",
-        "[7, 8, 9]\n"
-       ]
-      }
-     ],
-     "prompt_number": 7
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "mc.add_clf(clf, 'rf')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 8
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.add_clf(div_wrapper, 'div_by')"
+      "mc.train = train"
      ],
      "language": "python",
      "metadata": {},
@@ -126,96 +91,96 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.fit()"
+      "mc.add_clf(clf, 'rf')"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "C 7\n",
-        "Q"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 8\n",
-        "S"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 9\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 10
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.accuracy()"
+      "mc.fit()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 11,
-       "text": [
-        "div_by    0.843284\n",
-        "rf        0.817164\n",
-        "Name: Accuracy"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 11
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "pred = mc.predict()"
+      "mc.cv_accuracy()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "rf    0.820426\n",
+        "Name: CV Accuracy"
+       ]
+      }
+     ],
      "prompt_number": 12
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "pred_div_0 = pred['div_by'] == 0"
+      "mc.feature_labels"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": [
+        "Index([pclass, age, sibsp, parch, fare, sex#female, sex#male, embarked#C, embarked#Q, embarked#S], dtype=object)"
+       ]
+      }
+     ],
      "prompt_number": 13
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "pred_rf_0 = pred['rf'] == 0"
+      "mc.clfs['rf'].feature_importances_"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "array([ 0.12658603,  0.13118679,  0.04367757,  0.02945008,  0.17802986,\n",
+        "        0.22742923,  0.230205  ,  0.00992472,  0.00752461,  0.0159861 ])"
+       ]
+      }
+     ],
      "prompt_number": 14
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Only important"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "pred = pred[(pred_div_0 != pred_rf_0)]"
+      "train.role['sibsp'] = train.REJECT"
      ],
      "language": "python",
      "metadata": {},
@@ -226,34 +191,18 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "len(pred)"
+      "train.role['parch'] = train.REJECT"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 16,
-       "text": [
-        "9"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 16
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Score"
-     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "test = copper.load('test')"
+      "train.role['embarked'] = train.REJECT"
      ],
      "language": "python",
      "metadata": {},
@@ -275,24 +224,23 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.train = train\n",
-      "mc.test = test"
+      "mc.train = train"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mc.add_clf(div_wrapper, 'div')"
+      "mc.add_clf(clf, 'rf')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -302,54 +250,92 @@
      ],
      "language": "python",
      "metadata": {},
+     "outputs": [],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mc.cv_accuracy()"
+     ],
+     "language": "python",
+     "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "output_type": "pyout",
+       "prompt_number": 30,
        "text": [
-        "C 7\n",
-        "Q"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 8\n",
-        "S"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 9\n"
+        "rf    0.823793\n",
+        "Name: CV Accuracy"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 30
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Only Sex and age"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "pred = mc.predict()"
+      "train = copper.load('train')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "copper.save(pred, 'pred_div_embarked.csv', index=False, header=False)"
+      "train.role[:] = train.REJECT\n",
+      "train.role['sex'] = train.INPUT\n",
+      "train.role['age'] = train.INPUT\n",
+      "train.role['survived'] = train.TARGET"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 34
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mc.train = train"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 35
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mc.cv_accuracy()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 37,
+       "text": [
+        "rf    0.784512\n",
+        "Name: CV Accuracy"
+       ]
+      }
+     ],
+     "prompt_number": 37
     },
     {
      "cell_type": "code",
